GpuMemoryBufferVideoFramePool should preserve all VideoFrameMetadata

Bug: 837565
Change-Id: I69f5061cfd9352fd2976cdea0f4d1b43f423163d
Reviewed-on: https://chromium-review.googlesource.com/1036605
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555144}
Former-commit-id: 99b54d19679ac2b3fc506c02d1076d8dea2be73c